<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/etNameRegister"
        android:layout_width="298dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="154dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="529dp"
        android:autofillHints="@string/name"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextFields"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/etEmailRegister"
        android:layout_width="298dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="226dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="457dp"
        android:autofillHints="@string/email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextFields"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/etPasswordRegister"
        android:layout_width="298dp"
        android:layout_height="44dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="301dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="386dp"
        android:autofillHints="@string/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnRegisterRegister"
        android:layout_width="298dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="392dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="297dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>