<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="268dp"
        android:layout_height="44dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="323dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="364dp"
        android:autofillHints="@string/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="268dp"
        android:layout_height="48dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="435dp"
        android:autofillHints="@string/email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextFields"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginTop="525dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="185dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FF0000"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/register_now"
        android:textColor="#0073FF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="268dp"
        android:layout_height="50dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="426dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="255dp"
        android:background="#4CAF50"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="265dp"
        android:layout_height="81dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="564dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/jfood_logo" />


</androidx.constraintlayout.widget.ConstraintLayout>